force-app/main/default/objects/Opportunity/fields/ACV_MuleSoft__c.field-meta.xml
<CustomField>
    <fullName>ACV_MuleSoft__c</fullName>
    <description>MuleSoft ACV Amount</description>
    <inlineHelpText>How much ACV is logged in the Salesforce Partner Portal for this deal (MuleSoft)</inlineHelpText>
    <label>ACV: MuleSoft</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>