force-app/main/default/objects/Opportunity/fields/ACV_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ACV_Salesforce__c</fullName>
    <description>How much ACV is logged in the Salesforce Partner Portal for this deal (Salesforce)</description>
    <inlineHelpText>How much ACV is logged in the Salesforce Partner Portal for this deal (MuleSoft)</inlineHelpText>
    <label>ACV: Salesforce</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>