force-app/main/default/objects/Opportunity/fields/Agreed_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agreement on implementation plan and timeline</description>
    <inlineHelpText>Agreement on implementation plan and timeline</inlineHelpText>
    <label>Agreed Implementation</label>
    <type>Checkbox</type>
</CustomField>