force-app/main/default/objects/Opportunity/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed__c</fullName>
    <label>Budget Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>&quot;Not a concern&quot;</fullName>
            </value>
            <value>
                <fullName>Confirmed / in-line</fullName>
            </value>
            <value>
                <fullName>Limited / lean</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>