force-app/main/default/objects/Opportunity/fields/Caelius_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Caelius_Pattern__c</fullName>
    <label>Caelius Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Fast moving</fullName>
            </value>
            <value>
                <fullName>Passive (Salesforce has to drive it forward)</fullName>
            </value>
            <value>
                <fullName>Slow mover (Caelius to nudge it along)</fullName>
            </value>
            <value>
                <fullName>Dependent (This opp depends on another moving forward)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>