force-app/main/default/objects/Opportunity/fields/Card_Summary__c.field-meta.xml
<CustomField>
    <fullName>Card_Summary__c</fullName>
    <description>Field for Card Layout Summary</description>
    <formula>&apos;{&apos; + Owner.FirstName + &apos;}- {&apos;+ TEXT( CloseDate ) + &apos;}&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field for Card Layout Summary</inlineHelpText>
    <label>Card Summary</label>
    <type>Text</type>
</CustomField>