force-app/main/default/objects/Opportunity/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order</label>
    <type>Checkbox</type>
</CustomField>