force-app/main/default/objects/Opportunity/fields/CommercientSF6__ERP_Quote_Number_s__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__ERP_Quote_Number_s__c</fullName>
    <label>ERP Quote Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>