force-app/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>Compelling event established</description>
    <inlineHelpText>Compelling event established</inlineHelpText>
    <label>Need &amp; Timing</label>
    <type>TextArea</type>
</CustomField>