force-app/main/default/objects/Opportunity/fields/Competitor_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Comparison__c</fullName>
    <description>Competitor comparison conducted (if applicable)</description>
    <inlineHelpText>Competitor comparison conducted (if applicable)</inlineHelpText>
    <label>Competitor Comparison</label>
    <type>TextArea</type>
</CustomField>