force-app/main/default/objects/Opportunity/fields/Contract_for_Partner_Services_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_for_Partner_Services_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Contract for Partner Services Signed?</inlineHelpText>
    <label>Contract for Partner Services Signed</label>
    <type>Checkbox</type>
</CustomField>