force-app/main/default/objects/Opportunity/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Customer)</relationshipLabel>
    <relationshipName>CustomerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>