force-app/main/default/objects/Opportunity/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>