force-app/main/default/objects/Opportunity/fields/Decision_making_process__c.field-meta.xml
<CustomField>
    <fullName>Decision_making_process__c</fullName>
    <description>Decision making process identified</description>
    <inlineHelpText>Decision making process identified</inlineHelpText>
    <label>Authority</label>
    <type>TextArea</type>
</CustomField>