force-app/main/default/objects/Opportunity/fields/Discovery_to_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>Discovery_to_Close_Days__c</fullName>
    <formula>CloseDate - Stage5_Start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discovery to Close Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>