force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>End Date of the opportunity</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>