force-app/main/default/objects/Opportunity/fields/External_Commissions__c.field-meta.xml
<CustomField>
    <fullName>External_Commissions__c</fullName>
    <inlineHelpText>Any payable external sales commissions</inlineHelpText>
    <label>External Commissions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>