force-app/main/default/objects/Opportunity/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>Verbally agree to final pricing, terms and start date.</description>
    <inlineHelpText>Verbally agree to final pricing, terms and start date.</inlineHelpText>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>