force-app/main/default/objects/Opportunity/fields/Forecast_Currency__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Currency__c</fullName>
    <label>Forecast Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>