force-app/main/default/objects/Opportunity/fields/FPSA_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>FPSA_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>