force-app/main/default/objects/Opportunity/fields/FWD_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>FWD_PO_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>FWD PO Number</label>
    <type>AutoNumber</type>
</CustomField>