force-app/main/default/objects/Opportunity/fields/Hauler__c.field-meta.xml
<CustomField>
    <fullName>Hauler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hauler</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Hauler)</relationshipLabel>
    <relationshipName>HaulerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>