force-app/main/default/objects/Opportunity/fields/Hauling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hauling_Rate__c</fullName>
    <label>Hauling Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>