force-app/main/default/objects/Opportunity/fields/Hubspot_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Record_Id__c</fullName>
    <description>This is External Id of Hubspot Records</description>
    <externalId>true</externalId>
    <inlineHelpText>This is External Id of Hubspot Records</inlineHelpText>
    <label>Hubspot Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>