force-app/main/default/objects/Opportunity/fields/Investment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Investment_Summary__c</fullName>
    <description>Investment acknowledged</description>
    <inlineHelpText>Investment acknowledged</inlineHelpText>
    <label>Budget</label>
    <type>TextArea</type>
</CustomField>