force-app/main/default/objects/Opportunity/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(
    ISBLANK(Start_Date__c) = false,
    ISBLANK(End_Date__c) = false,
    TODAY() &gt;= Start_Date__c,
    TODAY() &lt;= End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity is within start/end timeline</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>