force-app/main/default/objects/Opportunity/fields/isAutomationOpportunity__c.field-meta.xml
<CustomField>
    <fullName>isAutomationOpportunity__c</fullName>
    <formula>CONTAINS(Name  , &apos;Automation&apos;)  || CONTAINS(Name  , &apos;RPA&apos;) || CONTAINS(Name  , &apos;IDP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAutomationOpportunity</label>
    <type>Checkbox</type>
</CustomField>