force-app/main/default/objects/Opportunity/fields/Lead_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Name__c</fullName>
    <inlineHelpText>Enter the BDR or Partner Rep Name</inlineHelpText>
    <label>Lead Source Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>