force-app/main/default/objects/Opportunity/fields/LeadSourceContact__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the contact that referred this lead</description>
    <label>Lead Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>