force-app/main/default/objects/Opportunity/fields/Loss_Description__c.field-meta.xml
<CustomField>
    <fullName>Loss_Description__c</fullName>
    <description>Description of why this opportunity was lost</description>
    <inlineHelpText>Description of why this opportunity was lost</inlineHelpText>
    <label>Loss Description</label>
    <type>TextArea</type>
</CustomField>