force-app/main/default/objects/Opportunity/fields/Main_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitors__c</fullName>
    <inlineHelpText>Specify if any Competition identified</inlineHelpText>
    <label>Main Competitors</label>
    <length>150</length>
    <type>Text</type>
</CustomField>