force-app/main/default/objects/Opportunity/fields/Next_Task__c.field-meta.xml
<CustomField>
    <fullName>Next_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What is the next task to move this opportunity forward</inlineHelpText>
    <label>Next Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>