force-app/main/default/objects/Opportunity/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <description>Legal, security and procurement objections overcome if requested.</description>
    <inlineHelpText>Legal, security and procurement objections overcome if requested.</inlineHelpText>
    <label>Objections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>