force-app/main/default/objects/Opportunity/fields/Opportunity_Industry__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Industry__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Industry</label>
    <type>Text</type>
</CustomField>