force-app/main/default/objects/Opportunity/fields/Opportunity_missing_closing_data__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_missing_closing_data__c</fullName>
    <formula>ISBLANK(SOW__c) || ISBLANK(Resource_Plan__c) || ISBLANK(Proposal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity missing closing data</label>
    <type>Checkbox</type>
</CustomField>