force-app/main/default/objects/Opportunity/fields/Opportunity_Quality__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quality__c</fullName>
    <inlineHelpText>High = good budget, work we&apos;ve done, clear needs
Medium = budget may be limited, or scope may be unclear
Low = budget questionable, or possible difficult client, or high risk project
DQ Likely = we should validate they have budget and need ASAP before investing further in the sales process</inlineHelpText>
    <label>Opportunity Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big Bet (Critical Deal)</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>Low (SF AEs to drive timing)</label>
            </value>
            <value>
                <fullName>DQ Likely</fullName>
                <label>DQ Likely (Minimal effort)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>