force-app/main/default/objects/Opportunity/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <type>Url</type>
</CustomField>