force-app/main/default/objects/Opportunity/fields/Pain_Goal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Pain_Goal_Summary__c</fullName>
    <description>Quantifiable business goals and pain identified</description>
    <inlineHelpText>Quantifiable business goals and pain identified</inlineHelpText>
    <label>Pain/Goal Summary</label>
    <type>TextArea</type>
</CustomField>