force-app/main/default/objects/Opportunity/fields/Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal__c</fullName>
    <label>Partner Portal</label>
    <type>Url</type>
</CustomField>