force-app/main/default/objects/Opportunity/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>(CloseDate &lt;= TODAY()) &amp;&amp; (IsClosed = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>