force-app/main/default/objects/Opportunity/fields/PoC_or_Demo__c.field-meta.xml
<CustomField>
    <fullName>PoC_or_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did Caelius have to invest to put together a PoC or custom demo?</inlineHelpText>
    <label>PoC or Demo</label>
    <type>Checkbox</type>
</CustomField>