force-app/main/default/objects/Opportunity/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check Deals Fusion wants to Closely Monitor</inlineHelpText>
    <label>Caelius priority</label>
    <type>Checkbox</type>
</CustomField>