force-app/main/default/objects/Opportunity/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Custom Field to be shown on New Opportunity</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-- Please Select --</fullName>
            </value>
            <value>
                <fullName>Enabled Analytics</fullName>
            </value>
            <value>
                <fullName>SAP License Re-sale</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Sub-contracting</fullName>
            </value>
            <value>
                <fullName>Federal Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>