force-app/main/default/objects/Opportunity/fields/Profit_for_the_Deal__c.field-meta.xml
<CustomField>
    <fullName>Profit_for_the_Deal__c</fullName>
    <label>Profit for the Deal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>