force-app/main/default/objects/Opportunity/fields/Project_Win_Story__c.field-meta.xml
<CustomField>
    <fullName>Project_Win_Story__c</fullName>
    <description>Project Win Story</description>
    <inlineHelpText>Project Win Story</inlineHelpText>
    <label>Project Win Story</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>