force-app/main/default/objects/Opportunity/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <type>Url</type>
</CustomField>