force-app/main/default/objects/Opportunity/fields/Prospect_Role_Summary__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Role_Summary__c</fullName>
    <description>Clear understanding of  customer&apos;s role in the org</description>
    <inlineHelpText>Clear understanding of  customer&apos;s role in the org</inlineHelpText>
    <label>Prospect Role Summary</label>
    <type>TextArea</type>
</CustomField>