force-app/main/default/objects/Opportunity/fields/Purchase_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Multiplier__c</fullName>
    <label>Purchase Multiplier</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>