force-app/main/default/objects/Opportunity/fields/Purchase_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Purchase Order Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>