force-app/main/default/objects/Opportunity/fields/Reference_Architecture__c.field-meta.xml
<CustomField>
    <fullName>Reference_Architecture__c</fullName>
    <label>Reference Architecture</label>
    <type>Url</type>
</CustomField>