force-app/main/default/objects/Opportunity/fields/Related_Technology_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Related_Technology_Rollup__c</fullName>
    <label>Related Technology Rollup</label>
    <summaryForeignKey>Technology__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>