force-app/main/default/objects/Opportunity/fields/Resale_Cost__c.field-meta.xml
<CustomField>
    <fullName>Resale_Cost__c</fullName>
    <inlineHelpText>Cost of License From SAP</inlineHelpText>
    <label>Resale Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>