force-app/main/default/objects/Opportunity/fields/Resale_Margin__c.field-meta.xml
<CustomField>
    <fullName>Resale_Margin__c</fullName>
    <formula>Amount - Resale_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resale Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>