force-app/main/default/objects/Opportunity/fields/Resource_Plan__c.field-meta.xml
<CustomField>
    <fullName>Resource_Plan__c</fullName>
    <label>Resource Plan</label>
    <type>Url</type>
</CustomField>