force-app/main/default/objects/Opportunity/fields/S_W_vendor_contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>S_W_vendor_contract_Signed__c</fullName>
    <description>Contract for Software vendor signed?</description>
    <inlineHelpText>Contract for Software vendor signed?</inlineHelpText>
    <label>S/W vendor contract Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>