force-app/main/default/objects/Opportunity/fields/Sales_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Sales_Multiplier__c</fullName>
    <label>Sales Multiplier</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>