force-app/main/default/objects/Opportunity/fields/Salesforce_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_Status__c</fullName>
    <inlineHelpText>What is the relationship coming to Caelius with this opportunity</inlineHelpText>
    <label>Salesforce Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED - Prior SF Experience</fullName>
            </value>
            <value>
                <fullName>RED - Prior SF Partner</fullName>
            </value>
            <value>
                <fullName>Yellow - Prior SF Attrit</fullName>
            </value>
            <value>
                <fullName>Green - Changing Partners</fullName>
            </value>
            <value>
                <fullName>Green - New to SF/Mule</fullName>
            </value>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>