force-app/main/default/objects/Opportunity/fields/Salesforce_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order_Form__c</fullName>
    <label>Salesforce Order Form</label>
    <type>Url</type>
</CustomField>