force-app/main/default/objects/Opportunity/fields/Scoping__c.field-meta.xml
<CustomField>
    <fullName>Scoping__c</fullName>
    <label>Scoping</label>
    <type>Url</type>
</CustomField>