force-app/main/default/objects/Opportunity/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <inlineHelpText>Date when we are supposed to have completed project for this SOW. best date on date of closing the deal. Verbally agree to final pricing, terms and start date.</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>