force-app/main/default/objects/Opportunity/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <inlineHelpText>Date when project or service for this opp starts. Verbally agree to final pricing, terms and start date.</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>