force-app/main/default/objects/Opportunity/fields/Signed_SOW_Verified__c.field-meta.xml
<CustomField>
    <fullName>Signed_SOW_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signed Documents in Salesforce verified</description>
    <inlineHelpText>Signed Documents in Salesforce verified</inlineHelpText>
    <label>Signed SOW Verified</label>
    <type>Checkbox</type>
</CustomField>