force-app/main/default/objects/Opportunity/fields/Solution_Details__c.field-meta.xml
<CustomField>
    <fullName>Solution_Details__c</fullName>
    <description>Agreement on which option(s)/ solutions to move forward with</description>
    <inlineHelpText>Agreement on which option(s)/ solutions to move forward with</inlineHelpText>
    <label>Solution Details</label>
    <type>TextArea</type>
</CustomField>