force-app/main/default/objects/Opportunity/fields/Solution_Fit__c.field-meta.xml
<CustomField>
    <fullName>Solution_Fit__c</fullName>
    <description>Agreement that our services meet their needs</description>
    <inlineHelpText>Agreement that our services meet their needs</inlineHelpText>
    <label>Solution Fit</label>
    <type>TextArea</type>
</CustomField>