force-app/main/default/objects/Opportunity/fields/Solution_Response__c.field-meta.xml
<CustomField>
    <fullName>Solution_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>“Yes” on the solution, If we meet final financial and legal terms</description>
    <inlineHelpText>“Yes” on the solution, If we meet final financial and legal terms</inlineHelpText>
    <label>Solution Response</label>
    <type>Checkbox</type>
</CustomField>