force-app/main/default/objects/Opportunity/fields/Stage1_Age__c.field-meta.xml
<CustomField>
    <fullName>Stage1_Age__c</fullName>
    <formula>(Stage1_End_date__c - Stage1_Start_date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage1 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>