force-app/main/default/objects/Opportunity/fields/Stage1_End_date__c.field-meta.xml
<CustomField>
    <fullName>Stage1_End_date__c</fullName>
    <label>Stage1 End date</label>
    <type>Date</type>
</CustomField>