force-app/main/default/objects/Opportunity/fields/Stage1_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Stage1_Start_date__c</fullName>
    <label>Stage1 Start date</label>
    <type>Date</type>
</CustomField>