force-app/main/default/objects/Opportunity/fields/Stage2_Age__c.field-meta.xml
<CustomField>
    <fullName>Stage2_Age__c</fullName>
    <formula>(Stage2_End_date__c - Stage2_Start_date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage2 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>