force-app/main/default/objects/Opportunity/fields/Stage2_End_date__c.field-meta.xml
<CustomField>
    <fullName>Stage2_End_date__c</fullName>
    <label>Stage2 End date</label>
    <type>Date</type>
</CustomField>