force-app/main/default/objects/Opportunity/fields/Stage2_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Stage2_Start_date__c</fullName>
    <label>Stage2 Start date</label>
    <type>Date</type>
</CustomField>