force-app/main/default/objects/Opportunity/fields/Stage3_Age__c.field-meta.xml
<CustomField>
    <fullName>Stage3_Age__c</fullName>
    <formula>(Stage3_End_date__c - Stage3_Start_date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage3 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>