force-app/main/default/objects/Opportunity/fields/Stage3_End_date__c.field-meta.xml
<CustomField>
    <fullName>Stage3_End_date__c</fullName>
    <label>Stage3 End date</label>
    <type>Date</type>
</CustomField>