force-app/main/default/objects/Opportunity/fields/Stage3_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Stage3_Start_date__c</fullName>
    <label>Stage3 Start date</label>
    <type>Date</type>
</CustomField>